--- a/sources/stylesheets/components/_site-footer.scss
+++ b/sources/stylesheets/components/_site-footer.scss
@@ -1,8 +1,5 @@
 .site-footer {
-  position: absolute!important;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: relative;
   min-height: $height-base;
 
   .inner {
@@ -37,7 +34,7 @@
   .voog-reference {
     @include color($black, 1);
     opacity: .55;
-    // text-align: center;
+    text-align: center;
     padding: 0 0 15px;
 
     &:hover {
