--- a/sources/stylesheets/layouts/_common-page.scss
+++ b/sources/stylesheets/layouts/_common-page.scss
@@ -1,10 +1,13 @@
 .common-page {
 
   .sidebar-active {
-    @extend %clearfix:after;
     max-width: 1000px;
     width: 100%;
-    margin: 0 auto 100px;
+    margin: 0 auto;
+
+    &:after {
+      @extend %clearfix;
+    }
 
     .wrap {
       margin: 0;
@@ -16,7 +19,6 @@
     }
     .page-content {
       margin-left: 240px;
-      margin-bottom: 0;
     }
 
     @include query($tablet-2) {
