--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -97,9 +97,7 @@ a img {
 
 .site-container {
   margin: 0 auto;
-  overflow: hidden;
   position: relative;
-  min-height: 100vh;
   perspective: 1000px;
   -webkit-transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
@@ -116,6 +114,26 @@ a img {
   -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
   transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 }
+.flexbox .site-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column;
+  min-height: 100vh;
+}
 .mobilemenu-open .site-container {
   -webkit-transform: translate3d(-160px, 0, 0);
   transform: translate3d(-160px, 0, 0);
@@ -127,25 +145,27 @@ a img {
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
+.blog-article-page .site-container {
+  overflow: hidden;
+}
+.comments-open .site-container {
+  overflow: visible;
+}
+
+.flexbox .page-body {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
 
 .page-content {
   display: block;
   position: relative;
-  margin-bottom: 100px;
   max-width: 100vw;
-}
-.blog-article-page .page-content {
-  margin-bottom: 240px;
-}
-@media screen and (max-width: 480px) {
-  .blog-article-page .page-content {
-    margin-bottom: 335px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .blog-article-page.comments-open .page-content {
-    margin-bottom: 0 !important;
-  }
 }
 
 .loader {
@@ -379,7 +399,7 @@ a img {
   max-width: 100%;
 }
 
-.wrap:after, .common-page .sidebar-active, .blog-news-page .articles-listing:after, .site-header:after, .search:after,
+.wrap:after, .common-page .sidebar-active:after, .blog-news-page .articles-listing:after, .site-header:after, .search:after,
 .search-form:after, .site-footer .blog-article-nav:after, .content-area:after, .contacts .content-area table tr:after, .footer .content-area table tr:after {
   display: table;
   clear: both;
@@ -621,7 +641,7 @@ a img {
 .common-page .sidebar-active {
   max-width: 1000px;
   width: 100%;
-  margin: 0 auto 100px;
+  margin: 0 auto;
 }
 .common-page .sidebar-active .wrap {
   margin: 0;
@@ -632,7 +652,6 @@ a img {
 }
 .common-page .sidebar-active .page-content {
   margin-left: 240px;
-  margin-bottom: 0;
 }
 @media screen and (max-width: 768px) {
   .common-page .sidebar-active .page-content {
@@ -897,15 +916,14 @@ a img {
 }
 @media screen and (max-width: 480px) {
   .article-comments {
-    right: -100vw;
     box-sizing: border-box;
-    width: 100vw;
     box-shadow: none;
   }
 }
 .article-comments.open {
   top: 0;
   right: 0;
+  width: 100%;
   -webkit-transition: 250ms;
   -moz-transition: 250ms;
   transition: 250ms;
@@ -2348,10 +2366,7 @@ a img {
 }
 
 .site-footer {
-  position: absolute !important;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: relative;
   min-height: 100px;
 }
 .site-footer .inner {
@@ -2365,6 +2380,7 @@ a img {
 .site-footer .voog-reference {
   color: black;
   opacity: .55;
+  text-align: center;
   padding: 0 0 15px;
 }
 .site-footer .voog-reference:hover {
